# opencode.nvim

./: .gitignore  .luarc.json  .nvimlog  .todolist.json  IMPLEMENTATION_PLAN.md  QUESTION_IMPLEMENTATION_PLAN.md  README.md  REFACTORING.md  SPECIFICATION.md  TASKS.md  agents_research.md  foobar.py  helloworld.py  main.go  package-lock.json  package.json  plugin_install_guide.md  test.lua  test.sh
doc/: opencode.txt
docs/: ACCUMULATED_DIFF_ARTIFACT_FEATURE.md
opencode_default_config/: opencode.jsonc
opencode_nvim/: opencode.jsonc
plugin/: opencode.lua
scripts/: bootstrap-test-deps.sh  check-architecture.lua  check-send-flow.lua  check-state-ownership.lua  check-transport.lua  install-tools.sh  integration-chat-render-freshness.lua  integration-chat-tabs.lua  nvim-test-deps.sh  smoke-chat-new-session-skill-render.lua  smoke-require.lua  test-headless.sh  test-input-autocomplete.lua  test-input-history.lua  test-input-mentions.lua  test-input-slash-commands.lua
test_code_project/: main.go  testapp  utils.go
test_project/: README.md  main.py  pyproject.toml
test_project/tests/: test_todos.py
test_repo/: foobar.py  hehe.py  kaaboom.py  main.py
tests/: check-architecture.lua  check-send-flow.lua  check-state-ownership.lua  check-transport.lua  integration-chat-render-freshness.lua  integration-chat-tabs.lua  minimal_init.lua  nvim-test-deps.sh  run.sh  smoke-chat-new-session-skill-render.lua  smoke-require.lua  test-headless.sh  test-input-autocomplete.lua  test-input-history.lua  test-input-mentions.lua  test-input-slash-commands.lua
(+168 files in other folders)
